refactor start shell